Bug 365048: JSRuntime threadTPIndex should be a static, r=brendan